--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -23,8 +23,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y openjdk-17-jdk zip unzip libffi-dev libssl-dev \
-            liblzma-dev zlib1g-dev libncurses5 libstdc++6 git \
-            autoconf automake libtool pkg-config cmake
+            liblzma-dev zlib1g-dev libncurses6 libstdc++6 git \
+            autoconf automake libtool pkg-config cmake \
+            python3-dev python3-setuptools gcc g++ \
+            libjpeg-dev libfreetype6-dev
           python -m pip install --upgrade pip
           pip install --upgrade buildozer cython virtualenv
 
